--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -499,6 +499,57 @@ journal={Medium},
 publisher={Aditya Mittal},
   note={accessed: 2021-11-22},
 }
+@article{yasen2019systematic,
+  title={A systematic review on hand gesture recognition techniques, challenges and applications},
+  author={Yasen, Mais and Jusoh, Shaidah},
+  journal={PeerJ Computer Science},
+  volume={5},
+  pages={e218},
+  year={2019},
+  publisher={PeerJ Inc.}
+}
+@article{aashni2017international,
+  title={International conference on advances in computing \& communications},
+  author={Aashni, H and Archanasri, S and Nivedhitha, A and Shristi, P and Jyothi, SN},
+  journal={Science Direct},
+  volume={115},
+  pages={367--374},
+  year={2017}
+}
+@article{vaibhavi2014review,
+  title={A review of various gesture recognition techniques},
+  author={Vaibhavi, SG and Akshay, AK and Sanket, NR and Vaishali, AT and Shabnam, SS},
+  journal={International Journal of Engineering and Computer Science},
+  volume={3},
+  pages={8202--8206},
+  year={2014}
+}
+@incollection{choudhury2015review,
+  title={A review on vision-based hand gesture recognition and applications},
+  author={Choudhury, Ananya and Talukdar, Anjan Kumar and Sarma, Kandarpa Kumar},
+  booktitle={Intelligent applications for heterogeneous system modeling and design},
+  pages={256--281},
+  year={2015},
+  publisher={IGI Global}
+}
+%
+@misc{trainingNN4GestureDetection,
+title={Taining a neural network to detect gestures with OpenCV in Python},
+url={https://towardsdatascience.com/training-a-neural-network-to-detect-gestures-with-opencv-in-python-e09b0a12bdf1},
+journal={Medium},
+publisher={Brenner Heintz},
+  note={accessed: 2021-11-28},
+}
+@article{oudah2020hand,
+  title={Hand gesture recognition based on computer vision: a review of techniques},
+  author={Oudah, Munir and Al-Naji, Ali and Chahl, Javaan},
+  journal={journal of Imaging},
+  volume={6},
+  number={8},
+  pages={73},
+  year={2020},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
 
 % +++++++++++++++++++++++  END ==============================
 
