--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -162,6 +162,10 @@
 \newacronym{svm}{SVM}{Support Vector Machine}
 \newacronym{acf}{ACF}{Aggregated channel feature}
 \newacronym{hog}{HOG}{Histogram of Oriented Gradients}
+\newacronym{ann}{ANN}{Artificial Neural Networks}
+\newacronym{knn}{KNN}{K-nearest neighbor}
+\newacronym{nb}{NB}{Naive Bayes}
+\newacronym{roi}{ROI}{Region Of Interest}
 
 
 % ========================== END ======================
