--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -550,6 +550,20 @@ publisher={Brenner Heintz},
   year={2020},
   publisher={Multidisciplinary Digital Publishing Institute}
 }
+@book{ramakrishnan2003database,
+  title={Database management systems},
+  author={Ramakrishnan, Raghu and Gehrke, Johannes and Gehrke, Johannes},
+  volume={3},
+  year={2003},
+  publisher={McGraw-Hill New York}
+}
+@misc{rdbmsDbmsDiff,
+title={Difference between RBDMS and MongoDB},
+url={http://www.differencebetween.net/technology/difference-between-rdbms-and-mongodb/},
+journal={DifferenceBetween.net},
+publisher={Sagar Khillar},
+  note={accessed: 2021-11-28},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
