--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -150,6 +150,7 @@
 \newacronym{db}{DB}{Database}
 \newacronym{bsp}{BSP}{Board Support Package}
 \newacronym{rdbms}{RDBMS}{Relational Database Management System}
+\newacronym{dbms}{DBMS}{Database Management System}
 \newacronym{cv}{CV}{Computer Vision}
 \newacronym{soc}{SoC}{System-on-a-Chip}
 \newacronym{ac}{AC}{Alternating Current}
@@ -166,6 +167,7 @@
 \newacronym{knn}{KNN}{K-nearest neighbor}
 \newacronym{nb}{NB}{Naive Bayes}
 \newacronym{roi}{ROI}{Region Of Interest}
+\newacronym{sql}{SQL}{Structured Query Language}
 
 
 % ========================== END ======================
