ADD: Daemons theoretical foundations

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -16,7 +16,7 @@
 \newacronym{pwm}{PWM}{Pulse-Width Modulation}
 \newacronym{ic}{IC}{Integrated Circuit}
 \newacronym{ssr}{SSR}{Solid-State Relay}
-\newacronym{pid}{PID}{Proportional Integrative Derivative}
+%\newacronym{pid}{PID}{Proportional Integrative Derivative}
 \newacronym{pci}{PCI}{Peripheral Component Interconnect}
 \newacronym{pcb}{PCB}{Printed Circuit Board}
 \newacronym{io}{I/O}{Input/Output}
@@ -168,6 +168,8 @@
 \newacronym{nb}{NB}{Naive Bayes}
 \newacronym{roi}{ROI}{Region Of Interest}
 \newacronym{sql}{SQL}{Structured Query Language}
-
+\newacronym{pgid}{PGID}{Process Group ID}
+\newacronym{sid}{SID}{Session ID}
+\newacronym{pid}{PID}{Process ID}
 
 % ========================== END ======================
