--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -168,6 +168,8 @@
 \newacronym{nb}{NB}{Naive Bayes}
 \newacronym{roi}{ROI}{Region Of Interest}
 \newacronym{sql}{SQL}{Structured Query Language}
+\newacronym{er}{ER}{Entity-Relationship}
+\newacronym{wal}{WAL}{Write-Ahead Log}
 
 
 % ========================== END ======================
