ADD: Theor-Found: RDBMS - ER model

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -564,6 +564,13 @@ journal={DifferenceBetween.net},
 publisher={Sagar Khillar},
   note={accessed: 2021-11-28},
 }
+@misc{crowsfootNotation,
+title={Crow's foot notation},
+url={https://vertabelo.com/blog/crow-s-foot-notation/},
+journal={Vertabelo},
+publisher={Patrycja Dybka},
+  note={accessed: 2021-11-29},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
