--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -173,5 +173,6 @@
 \newacronym{pgid}{PGID}{Process Group ID}
 \newacronym{sid}{SID}{Session ID}
 \newacronym{pid}{PID}{Process ID}
+\newacronym{erd}{ERD}{Entities-Relationships diagram}
 
 % ========================== END ======================
