--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -571,6 +571,13 @@ journal={Vertabelo},
 publisher={Patrycja Dybka},
   note={accessed: 2021-11-29},
 }
+@book{coronel2016database,
+  title={Database systems: design, implementation, \& management},
+  author={Coronel, Carlos and Morris, Steven},
+  year={2016},
+  publisher={Cengage Learning}
+}
+
 
 % +++++++++++++++++++++++  END ==============================
 
