--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -174,5 +174,7 @@
 \newacronym{sid}{SID}{Session ID}
 \newacronym{pid}{PID}{Process ID}
 \newacronym{erd}{ERD}{Entities-Relationships diagram}
+\newacronym{ddl}{DDL}{Data Definition Language}
+\newacronym{dml}{DML}{Data Manipulation Language}
 
 % ========================== END ======================
