--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -577,7 +577,20 @@ publisher={Patrycja Dybka},
   year={2016},
   publisher={Cengage Learning}
 }
-
+@misc{modernDBChoice,
+title={Which Modern Database Is Right for Your Use Case?},
+url={https://www.xplenty.com/blog/which-database/},
+journal={Xplenty},
+publisher={Donal Tobin},
+  note={accessed: 2021-11-30},
+}
+@misc{MysqlVsSqlite,
+title={SQLite vs MySQL – What's the Difference},
+url={https://www.hostinger.com/tutorials/sqlite-vs-mysql-whats-the-difference/},
+journal={Hostinger},
+publisher={Edward S.},
+  note={accessed: 2021-11-30},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
