ADD: Theor-Found: RDBMS - SQL C++ connector

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -591,6 +591,20 @@ journal={Hostinger},
 publisher={Edward S.},
   note={accessed: 2021-11-30},
 }
+@misc{MysqlConnAPIs,
+title={MySQL Connectors and APIs},
+url={https://dev.mysql.com/doc/index-connectors.html},
+journal={MySQL},
+publisher={MySQL},
+  note={accessed: 2021-11-30},
+}
+@misc{MysqlConnC++Intro,
+title={MySQL C++ Connector: Intro},
+url={https://dev.mysql.com/doc/connector-cpp/8.0/en/connector-cpp-introduction.html#connector-cpp-benefits},
+journal={MySQL},
+publisher={MySQL},
+  note={accessed: 2021-11-30},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
