--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -605,6 +605,14 @@ journal={MySQL},
 publisher={MySQL},
   note={accessed: 2021-11-30},
 }
+@misc{MysqlConnC++Example1,
+title={MySQL C++ Connector: Example 1},
+url={https://dev.mysql.com/doc/connector-cpp/1.1/en/connector-cpp-examples-complete-example-1.html},
+journal={MySQL},
+publisher={MySQL},
+  note={accessed: 2021-11-31},
+}
+
 
 % +++++++++++++++++++++++  END ==============================
 
