--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -313,21 +313,7 @@ abstract = {Cyber–physical system (CPS) and digital twin (DT) share the same g
   title={Beyond the waterfall: Software development at Microsoft},
   author={Cusumano, Michael A and Smith, Stanley A},
   year={1995},
-  publisher={Sloan School of Management, Massachusetts Institute of Technology]}
-}
-% 6
-@book{carne2004professional,
-  title={A professional's guide to data communication in a TCP/IP world},
-  author={Carne, E Bryan},
-  year={2004},
-  publisher={Artech House}
-}
-% 7
-@article{wright1995tcp,
-  title={TCP/IP illustrated. Vol. 2: The implementation},
-  author={Wright, Gary R and Stevens, W Richard},
-  journal={tii},
-  year={1995}
+  publisher={Sloan School of Management, Massachusetts Institute of Technology}
 }
 % 8
 @book{kerrisk2010linux,
@@ -612,23 +598,21 @@ journal={MySQL},
 publisher={MySQL},
   note={accessed: 2021-11-31},
 }
-
-
-
+%
 @misc{daemons-slides,
   title={Daemons Class Slides},
   author={Prof. Adriano Tavares \& Prof. Mongkol},
   year={2021},
   school={University of Minho}
 }
-
+%
 @misc{ddrivers,
 title={Device drivers: Why they're important and how to work with them},
 url={https://www.lifewire.com/what-is-a-device-driver-2625796},
 publisher={Tim Fisher},
   note={accessed: 2021-12-1},
 }
-
+%
 @misc{ddrivers-slides,
   title={Linux + DDrivers Class Slides},
   author={Prof. Adriano Tavares \& Prof. Mongkol},
