ADD: Theor Foundations about UI Frameworks

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -619,6 +619,13 @@ publisher={Tim Fisher},
   year={2021},
   school={University of Minho}
 }
+%
+@misc{qt-bib,
+title={Qt Framework and QML},
+url={https://www.sam-solutions.com/blog/qt-framework/},
+publisher={Sam Solutions},
+  note={accessed: 2021-12-1},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
