--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -626,6 +626,54 @@ url={https://www.sam-solutions.com/blog/qt-framework/},
 publisher={Sam Solutions},
   note={accessed: 2021-12-1},
 }
+@book{stallman2002gnu,
+  title={GNU Make: A Program for Directing Recompilation: GNU Make Version 3.79. 1},
+  author={Stallman, Richard M and McGrath, Roland},
+  year={2002},
+  publisher={Free software foundation}
+}
+@article{baker2020using,
+  title={Using GNU Make to Manage the Workflow of Data Analysis Projects},
+  author={Baker, Peter},
+  journal={Journal of Statistical Software},
+  volume={94},
+  number={1},
+  pages={1--46},
+  year={2020}
+}
+@book{raymond2003art,
+  title={The art of Unix programming},
+  author={Raymond, Eric S},
+  year={2003},
+  publisher={Addison-Wesley Professional}
+}
+@book{robbins2005unix,
+  title={Unix in a Nutshell},
+  author={Robbins, Arnold},
+  year={2005},
+  publisher={"O'Reilly Media, Inc."}
+}
+@misc{automakeManual,
+  title={GNU automake manual},
+url={https://www.gnu.org/software/automake/manual/automake.html},
+  publisher={GNU Foundation}
+  year={2021},
+  note={accessed: 2021-12-1},
+}
+@misc{automakeHistory,
+  title={GNU automake history},
+url={https://www.gnu.org/software/automake/history/automake-history.html#Dependency-Tracking-Evolution},
+  publisher={GNU Foundation}
+  year={2021},
+  note={accessed: 2021-12-1},
+}
+@misc{c++buildSystems,
+  title={An overview over build systems (mostly over C++ projects)},
+url={https://julienjorge.medium.com/an-overview-of-build-systems-mostly-for-c-projects-ac9931494444},
+  publisher={Medium},
+  year={2018},
+  note={accessed: 2021-12-1},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
