--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -176,5 +176,6 @@
 \newacronym{erd}{ERD}{Entities-Relationships diagram}
 \newacronym{ddl}{DDL}{Data Definition Language}
 \newacronym{dml}{DML}{Data Manipulation Language}
+\newacronym{bsd}{BSD}{Berkeley Software Distribution}
 
 % ========================== END ======================
