UPDT: UI Framework Theorical FOundations

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -656,14 +656,14 @@ publisher={Sam Solutions},
 @misc{automakeManual,
   title={GNU automake manual},
 url={https://www.gnu.org/software/automake/manual/automake.html},
-  publisher={GNU Foundation}
+  publisher={GNU Foundation},
   year={2021},
   note={accessed: 2021-12-1},
 }
 @misc{automakeHistory,
   title={GNU automake history},
 url={https://www.gnu.org/software/automake/history/automake-history.html#Dependency-Tracking-Evolution},
-  publisher={GNU Foundation}
+  publisher={GNU Foundation},
   year={2021},
   note={accessed: 2021-12-1},
 }
@@ -674,6 +674,23 @@ url={https://julienjorge.medium.com/an-overview-of-build-systems-mostly-for-c-pr
   year={2018},
   note={accessed: 2021-12-1},
 }
-
+@misc{ui-lists,
+title={C++ UI Libraries},
+url={https://philippegroarke.com/posts/2018/c++_ui_solutions/},
+publisher={Philippe M. Groarke},
+  note={accessed: 2021-12-2},
+}
+@misc{qt-site,
+title={THE BUILDING BLOCKS OF Qt},
+url={https://www.qt.io/product/frameworkhttps://www.qt.io/product/framework},
+publisher={Qt},
+  note={accessed: 2021-12-2},
+}
+@misc{qt-signals-slots,
+title={Signals \& Slots | Qt Core 5.15.7},
+url={https://doc.qt.io/qt-5/signalsandslots.html},
+publisher={Qt},
+  note={accessed: 2021-12-2},
+}
 % +++++++++++++++++++++++  END ==============================
 
