ADD: Theor-Found: Source code doc

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -674,6 +674,13 @@ url={https://julienjorge.medium.com/an-overview-of-build-systems-mostly-for-c-pr
   year={2018},
   note={accessed: 2021-12-1},
 }
+@misc{sourceCodeDocBestPractices,
+  title={Source code documentation best practices},
+url={https://easternpeak.com/blog/source-code-documentation-best-practices/},
+  publisher={Eastern Peak},
+  year={2017},
+  note={accessed: 2021-12-2},
+}
 
 % +++++++++++++++++++++++  END ==============================
 
